--- a/test_project/src/app/components/header/header.component.html
+++ b/test_project/src/app/components/header/header.component.html
@@ -1,1 +1,12 @@
-<p>header works!</p>
+<header>
+    <div class="container">
+        <nav>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+    </nav>
+    </div>
+    
+</header>
