--- a/test_project/src/app/components/header/header.component.css
+++ b/test_project/src/app/components/header/header.component.css
@@ -13,7 +13,7 @@ ul {
     display: flex;
     justify-content: left;
     align-items: center;
-    gap: 50px;
+    gap: 60px;
     padding: 25px 0;
 }
 
@@ -24,6 +24,6 @@ li {
 a {
     text-decoration: none;
     font-size: 1.2rem;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
     color: white;
 }
