--- a/crypto/src/app/components/app/app.component.html
+++ b/crypto/src/app/components/app/app.component.html
@@ -4,8 +4,9 @@
   </div>
   <div class="price-container">
     <app-price-data></app-price-data>
-  </div>  
+  </div>
 </div>
+<app-btc-chart></app-btc-chart>
 
 
 
