--- a/crypto/src/app/components/app/app.component.css
+++ b/crypto/src/app/components/app/app.component.css
@@ -1,10 +1,16 @@
+*{
+    padding: 0;
+    margin: 0;
+}
 .container {
     display: flex;
+    background-color: black;
+    color: white;
 }
 
 .wallet-container {
     width: 70%;
-    border: 1px solid black;
+    /* border: 1px solid white; */
     height: 100vh;
 }
 
