--- a/crypto/src/app/components/btc-chart/btc-chart.component.css
+++ b/crypto/src/app/components/btc-chart/btc-chart.component.css
@@ -1,9 +1,10 @@
 .chart-container {
-	width: 80vw;
-	height: 700px;
+	width: 100%;
+	height: 85vh;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	overflow: hidden;
   }
 
   .chart {
