--- a/crypto/src/app/components/price-data/price-data.component.html
+++ b/crypto/src/app/components/price-data/price-data.component.html
@@ -5,4 +5,5 @@
 <h3>The current price of eth is {{this.priceData.ethPrice}} $</h3>
 <button (click)="this.wallet.handleBuy()">Buy btc</button>
 <button (click)="this.wallet.handleSell()">Sell btc</button>
+<button (click)="this.callBtcPrice()">btc price</button>
 
